Arquivos do Exercicio da Loja CSS

--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <h1 class="titulo">ImaginArt</h1>
+        <h2 class="subtitulo">Sua imaginação é a arte!</h2>
     </div>
     
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a  class="textos-diversos" href="index.html">Página Inicial</a>
+        <a  class="textos-diversos" href="ctrl-estoque.html">Controle de Estoque</a>
+        <a  class="textos-diversos" href="add-produto.html">Adicionar Produto</a>
+        <a  class="textos-diversos" href="funcionarios.html">Funcionários</a>
     </div>
 
-    <h2>Controle de Estoque</h2>
+    <h2 class="subtitulo" >Controle de Estoque</h2>
 
     <table>
         <tr>
