--- a/modulo1/html-sistema-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/add-produto.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Adicionar Produto</title>
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <h1 class="titulo">ImaginArt</h1>
+        <h2 class="subtitulo">Sua imaginação é a arte!</h2>
     </div>
     
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a  class="textos-diversos" href="index.html">Página Inicial</a>
+        <a  class="textos-diversos" href="ctrl-estoque.html">Controle de Estoque</a>
+        <a  class="textos-diversos" href="add-produto.html">Adicionar Produto</a>
+        <a  class="textos-diversos" href="funcionarios.html">Funcionários</a>
     </div>
 
     
-    <h2>Adicionar Produto</h2>
+    <h2 class="subtitulo">Adicionar Produto</h2>
     <form action="">
         <div>
             <label for="link-foto">Link para foto: </label>
