--- a/modulo1/html-sistema-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/funcionarios.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div>
-        <p>Nome da loja</p>
+        <h1 class="titulo">ImaginArt</h1>
+        <h2 class="subtitulo">Sua imaginação é a arte!</h2>
     </div>
     
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a  class="textos-diversos" href="index.html">Página Inicial</a>
+        <a  class="textos-diversos" href="ctrl-estoque.html">Controle de Estoque</a>
+        <a  class="textos-diversos" href="add-produto.html">Adicionar Produto</a>
+        <a  class="textos-diversos" href="funcionarios.html">Funcionários</a>
     </div>
 
-    <h2>Funcionários</h2>
+    <h2 class="subtitulo">Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-      <ul >
+      <ul>
           <li>Stojan Phile</li>
           <li>Fadumo Kumbukani</li>
           <li>Zinat Phyllis</li>
