--- a/modulo1/css-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/comprar.html
@@ -14,7 +14,7 @@
     <div class="container-do-search">
         <div>
             <input type="text">
-            <img src="https://static.thenounproject.com/png/105498-200.png" class="icone" alt="Buscar">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Magnifying_glass_icon.svg/1200px-Magnifying_glass_icon.svg.png" class="icone" alt="Buscar">
         </div>
     </div>
     <div>
