Arquivos Labetube com ajuste de Responsividade

--- a/modulo1/css-labetube/video8.html
+++ b/modulo1/css-labetube/video8.html
@@ -18,7 +18,7 @@
 
     <main class="main-video">
         <h1>Video 8</h1>
-        <video src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4" controls width="90%"></video>
+        <video src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4" width="90%" height="auto" controls></video>
     </main>
 
     <footer><h2>( ͡° ͜ʖ ͡°)</h2></footer>
